--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
 		"tailwindcss": "^4.1.14",
 		"typescript": "^5.9.3",
 		"vite": "^7.1.10"
+	},
+	"dependencies": {
+		"lucide-svelte": "^0.553.0"
 	}
 }
